syntax = "proto3";

package common;

option go_package = "github.com/justjack1521/mevium/pkg/genproto/protocommon";

message ClientConnected {
  string session_id = 1;
  string remote_address = 2;
}

message ClientHeartbeat {
  string session_id = 1;
  string remote_address = 2;
}

message ClientDisconnected {
  string session_id = 1;
  string remote_address = 2;
}

message UserCreated {
  string user_id = 1;
  string player_id = 2;
  string customer_id = 3;
}

message UserDeleted {
  string user_id = 1;
}